--- a/client/index.html
+++ b/client/index.html
@@ -35,6 +35,7 @@
         <div class="loading-spinner"></div>
       </div>
     </main>
-    
+    <script src="main.bundle.js"></script>
+    <script src="install.bundle.js"></script>
   </body>
 </html>
